--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -713,12 +713,19 @@ textarea {
     margin: 2vh
 }
 
-.btnCV {
+.btnInfo {
     display: block !important;
     margin-left: auto;
     margin-right: auto;
     padding: 2vh 6vh !important;
     margin-bottom: 5%
+}
+
+.btnCV {
+    display: block !important;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2vh 6vh !important;
 }
 
 .btnProjet {
